add local jquery

--- a/monsocket/vpsmon/mon-client.html
+++ b/monsocket/vpsmon/mon-client.html
@@ -7,7 +7,8 @@
 #io_3,#io_4,#io_5 {background: green; color: white; padding: 5px; }
 #io_6,#io_7,#io_8 {background: red; color: white; padding: 5px; }
 </style>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="jquery-1.5.min.js" type="text/javascript" charset="utf-8"></script>
+
 </head>
 <body>
 
