--- a/monsocket/vpsmon/mon-client.html
+++ b/monsocket/vpsmon/mon-client.html
@@ -6,29 +6,32 @@
 #io_0,#io_1,#io_2 {background: blue; color: white; padding: 5px; }
 #io_3,#io_4,#io_5 {background: green; color: white; padding: 5px; }
 #io_6,#io_7,#io_8 {background: red; color: white; padding: 5px; }
+
+.montable {width: 600px; }
+#out_summary { width: 600px; border: #EEEEEE solid 1px; background: #E7E7E7 }
+
+#rx {background: red; color: white; padding: 5px; }
+#tx {background: green; color: white; padding: 5px; }
 </style>
 <script src="jquery-1.5.min.js" type="text/javascript" charset="utf-8"></script>
 
 </head>
 <body>
 
-<!-- KB/t tps  MB/s  us sy id   1m   5m   15m -->
-<table width=480>
-<thead><td>item</td><td>rx</td><td>tx</td><td>total</td></thead>
-<tbody id="iotitle"></tbody>
-<tbody id="iobody"></tbody>
-</tr>
-</table>
+<h2>VPS Mon - for EC2 (WebSocket & Node.JS)</h2>
 
-<table width=480>
-<thead><td>cpu</td><td>disk</td><td>mem</td><td>network</td></thead>
+<h3>System Usage</h3>
+<table class="montable">
+<thead><td>disk</td><td>mem</td><td>network</td></thead>
 <tbody id="summary"></tbody>
 </tr>
 </table>
 
+<h3>Network History</h3>
 <div id="out_summary"></div>
 
-<table width=480>
+<h3>Current Traffic</h3>
+<table class="montable">
 <thead><td>rx</td><td>tx</td></thead>
 <tbody id="out_realtime"></tbody>
 </tr>
@@ -68,8 +71,8 @@ w.onmessage = function(e) {
 		msg = msg.split(":::")[1];
 		if(msg.indexOf("rx")==0) {
 			var  a = msg.split(" ");
-			body += "<td>"+a[1]+" "+a[2]+"</td>";
-			body += "<td>"+a[6]+" "+a[7]+"</td>";
+			body += "<td id='rx'>"+a[1]+" "+a[2]+"</td>";
+			body += "<td id='tx'>"+a[6]+" "+a[7]+"</td>";
 			$("#out_realtime").html(body);
 		}
 	}
@@ -78,12 +81,15 @@ w.onmessage = function(e) {
 		//msg = msg.replace("\n","<br>");
 		$("#out_summary").html("<pre>"+msg+"</pre>");
 	}
-	else if(msg.match(/#mon2/)) {
-		var monarr = msg.split(":")[1].split(" ");
-		for(var  i=0;i<monarr.length; i++) {
-			if(i%2==0) continue;
-			body += "<td id='io_"+item+"'>"+monarr[i]+"</td>"
-		}
+	else if(msg.match(/#mon_usage:::/)) {
+		var monarr = msg.split(":::")[1].split(" ");
+		var disk = monarr[3];
+		var mem = monarr[5]; 
+		var network = monarr[7]/1024;
+		network = network.toFixed(2)
+		body += "<td id='io_1'>"+disk+"%</td>"
+		body += "<td id='io_2'>"+mem+"%</td>"
+		body += "<td id='io_3'>"+network+"%</td>"
 		$("#summary").html(body);
 	}
 	else if(msg.match(/#mon/)) {
@@ -105,10 +111,7 @@ function sendMessage() {
 	w.send($("#inputMessage").val());
 }
 window.onload = function() {
-	var headers = ["KB/t","tps","MB/s","user","system","idle","1m","5m","15m"];
-	for(var item in headers) {
-		$("#iotitle").append("<td>"+headers[item]+"</td>");
-	}
+
     log(log.buffer.join("\n"));
     $("#msgForm").submit(function(){
     		event.preventDefault();
