--- a/trunk/monsocket/vpsmon/mon-client.html
+++ b/trunk/monsocket/vpsmon/mon-client.html
@@ -45,6 +45,10 @@ id="sendButton">Send</button>
 
 <pre id="output"></pre>
 
+<a href="http://nodejs.org" target="_blank"><img src="nodejs_logo-1.png" border=0/></a>
+<br/>
+powered by <a href="http://cnodejs.org" target="_blank">cnodejs.org</a>
+
 <script>
 
 var output = $("#output");
